tests/suite/snapshots/suite__check__tests__check__bad_assign_2.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_assign_2.xi:2:9]
   │
 2 │     x = 1
   ·     ┬   ┬  
   ·     ╰────── Expected bool because of this
   ·         │  
   ·         ╰── Expected bool but found int
───╯

